--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Greener">
-        <activity android:name=".MyEvents"></activity>
+        <activity android:name=".MyEvents"
+            android:parentActivityName=".HomePage"></activity>
         <activity android:name=".HomePage" />
         <activity android:name=".Register" />
         <activity android:name=".Login" />
