--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,23 +4,26 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Greener">
-        <activity android:name=".MyEvents"
-            android:parentActivityName=".HomePage"></activity>
-        <activity android:name=".HomePage" />
-        <activity android:name=".Register" />
-        <activity android:name=".Login" />
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
-        <activity android:name=".IntroClass">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MyEvents"
+            android:parentActivityName=".HomePage" />
+        <activity android:name=".HomePage" />
+        <activity android:name=".Register" />
+        <activity android:name=".Login" />
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
+        <activity android:name=".IntroClass">
         </activity>
         <activity android:name=".enterOTP" />
         <activity android:name=".enterOTPforLogin" />
